--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,14 +134,18 @@ header .header-wrapper {
 /* SECTION 2 BEGIN*/
 
 .section-two {
-  width: 100vw;
-  padding: 0 9vw;
+  margin: 8rem auto;
 }
 
 .section-two article {
+  box-shadow: 0px 0px 10px #eeeeee;
+  border-radius: 10px;
+  padding: 2rem;
+  text-align: center;
+
   display: flex;
   flex-direction: column;
-  margin: 5vh auto;
+  margin: 2rem;
 }
 
 .section-two article section {
@@ -152,17 +156,15 @@ header .header-wrapper {
 
 .section-two img {
   width: 80vw;
-  margin: 1vh auto;
+  margin-bottom: 3rem;
 }
 
 .section-two article section h2 {
-  width: 100%;
-  margin: 3vh auto 0.5vh auto;
+  margin-bottom: 1rem;
   font-size: 1.2rem;
 }
 
 .section-two article section p {
-  margin: 1vh auto 15vh auto;
   font-size: 0.83rem;
   color: var(--grayish-blue);
 }
